[gd_scene load_steps=30 format=3 uid="uid://blveoq1jtp0cn"]

[ext_resource type="Script" path="res://scripts/dale_scripts/dale_sideview.gd" id="1_kjua3"]
[ext_resource type="Texture2D" uid="uid://buxxbljhn7nsf" path="res://assets/sprites/dale_sprites/dale_sideview.png" id="2_v7e0u"]

[sub_resource type="Animation" id="Animation_fnsm6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_abq25"]
resource_name = "attack_left"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_rbqww"]
resource_name = "attack_right"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_lgyus"]
resource_name = "attack_up_left"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_rwwm8"]
resource_name = "attack_up_right"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_86j6y"]
resource_name = "damaged_left"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 28, 29]
}

[sub_resource type="Animation" id="Animation_d5cui"]
resource_name = "damaged_right"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [30, 31, 30, 31]
}

[sub_resource type="Animation" id="Animation_fhfco"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}

[sub_resource type="Animation" id="Animation_p3o7c"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 4, 5]
}

[sub_resource type="Animation" id="Animation_a40ja"]
resource_name = "jump_attack_down_left"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67]
}

[sub_resource type="Animation" id="Animation_nus8e"]
resource_name = "jump_attack_Down_right"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_j8h4s"]
resource_name = "jump_attack_left"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_e5rw6"]
resource_name = "jump_attack_right"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_p8m6n"]
resource_name = "jump_attack_up_left"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_q6ykt"]
resource_name = "jump_attack_up_right"
length = 0.28
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_774n4"]
resource_name = "jump_left"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_d1n2g"]
resource_name = "jump_right"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [26, 27]
}

[sub_resource type="Animation" id="Animation_txrwa"]
resource_name = "run_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ewo1o"]
resource_name = "run_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_onog3"]
resource_name = "death_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [76, 77, 76, 77]
}

[sub_resource type="Animation" id="Animation_y0i7g"]
resource_name = "death_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [78, 79, 78, 79]
}

[sub_resource type="Animation" id="Animation_m06o3"]
resource_name = "scale_up_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [72, 73, 72, 73]
}

[sub_resource type="Animation" id="Animation_45f20"]
resource_name = "scale_up_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [74, 75, 74, 75]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ysnpx"]
_data = {
"RESET": SubResource("Animation_fnsm6"),
"attack_left": SubResource("Animation_abq25"),
"attack_right": SubResource("Animation_rbqww"),
"attack_up_left": SubResource("Animation_lgyus"),
"attack_up_right": SubResource("Animation_rwwm8"),
"damaged_left": SubResource("Animation_86j6y"),
"damaged_right": SubResource("Animation_d5cui"),
"death_left": SubResource("Animation_onog3"),
"death_right": SubResource("Animation_y0i7g"),
"idle_left": SubResource("Animation_fhfco"),
"idle_right": SubResource("Animation_p3o7c"),
"jump_attack_down_left": SubResource("Animation_a40ja"),
"jump_attack_down_right": SubResource("Animation_nus8e"),
"jump_attack_left": SubResource("Animation_j8h4s"),
"jump_attack_right": SubResource("Animation_e5rw6"),
"jump_attack_up_left": SubResource("Animation_p8m6n"),
"jump_attack_up_right": SubResource("Animation_q6ykt"),
"jump_left": SubResource("Animation_774n4"),
"jump_right": SubResource("Animation_d1n2g"),
"run_left": SubResource("Animation_txrwa"),
"run_right": SubResource("Animation_ewo1o"),
"scale_up_left": SubResource("Animation_m06o3"),
"scale_up_right": SubResource("Animation_45f20")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dfi26"]
radius = 16.0
height = 52.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8885f"]
radius = 17.0
height = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odivg"]
size = Vector2(33, 34)

[node name="dale_sideview" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_kjua3")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -1728
limit_right = 6080
limit_bottom = 768
position_smoothing_speed = 200.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_v7e0u")
hframes = 8
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
audio_max_polyphony = 34
libraries = {
"": SubResource("AnimationLibrary_ysnpx")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dfi26")

[node name="DamageArea2D" type="Area2D" parent="."]

[node name="DamageShape2D" type="CollisionShape2D" parent="DamageArea2D"]
shape = SubResource("CapsuleShape2D_8885f")
debug_color = Color(0.294118, 0.6, 0.552941, 0.419608)

[node name="AttackArea2D" type="Area2D" parent="." groups=["Attack"]]

[node name="AttackShape2D" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2(-22.5, 1)
shape = SubResource("RectangleShape2D_odivg")
debug_color = Color(0.87451, 0.298039, 0.466667, 0.419608)

[node name="InvincibilityTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.229
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.28
one_shot = true

[connection signal="body_entered" from="DamageArea2D" to="." method="_on_damage_area_2d_body_entered"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
